--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_HomeLayout.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Shared/_HomeLayout.cshtml
@@ -39,13 +39,19 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav  mb-2 mb-lg-0 ms-auto">
-                            <li class="nav-item fs-3 me-4 ">
+                            <li class="nav-item fs-4 me-4 ">
                                 <a class="nav-link active " aria-current="page" href="#home-section">Home</a>
                             </li>
-                            <li class="nav-item fs-3 me-4 ">
+                            <li class="nav-item fs-4 me-4 ">
                                 <a class="nav-link " href="#about-section">About</a>
                             </li>
-                            <li class="nav-item fs-3 ">
+                            <li class="nav-item fs-4 ">
+                                <a class="nav-link " href="#contact-section">Contact</a>
+                            </li>
+                            <li class="nav-item fs-4 ">
+                                <input type="submit" class="btn btn-warning" value="Register"  onclick="location.href='@Url.Action("RegistrationPage", "Home")'" />
+                            </li>
+                            <li class="nav-item fs-4 ">
                                 <a class="nav-link " href="#contact-section">Contact</a>
                             </li>
 
