--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Home/Home.cshtml
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/Views/Home/Home.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_HomeLayout.cshtml";
 }
 
-<section class="bg-dark" style="padding-top:10em;z-index:0;" id="home-section">
+<section class="bg-dark" style="padding-top:10em;z-index:0; width:100%" id="home-section">
     <div class="container ">
         <div class="row">
 
@@ -42,7 +42,7 @@
     </div>
 
 </section>
-<section class="bg-light" id="about-section">
+<section class="bg-light" id="about-section" style="width: 100%">
     <div class="container">
         <div class="row text-center mt-5">
             <div class="col-12">
@@ -78,7 +78,7 @@
     </div>
 </section>
 <hr class="mt-3 mb-3" />
-<section id="contact-section">
+<section id="contact-section" style="width: 100%">
     <div class="container mt-3 ">
 
         <h2 class="text-center"> Contact Us</h2>
@@ -131,10 +131,11 @@
 
 
                                             <div class="col-md-offset-2 col-md-2 col-2">
-                                                <input type="submit" value="Submit" class="btn btn-primary onclick=" location.href='<%: Url.Action("Home", "Home") %>' " " />
+                                                @*<input type="button" value="Submit" class="btn btn-primary onclick="BtnSubmitClick()" />*@
+                                                <button  class="btn btn-primary  id="save" onclick="BtnSubmitClick()">submit</button>
                                             </div>
                                             <div class="col-md-offset-2 col-md-2 col-2">
-                                                <input type="submit" value="Clear" id="Clear" class="btn btn-danger ms-auto" />
+                                                <input type="button" value="Clear" id="Clear" class="btn btn-danger ms-auto" />
                                             </div>
 
                                         </div>
@@ -143,7 +144,7 @@
 
 
                                 }
-                               
+
                             </div>
                         </div>
                     </div>
@@ -155,7 +156,7 @@
 
 </section>
 <hr />
-<section class="text-center">
+<section class="text-center" style="width: 100%">
     <div class="container">
 
         <p><i class="fas fa-home me-3 text-secondary"></i> Kerala, India</p>
@@ -171,16 +172,35 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+<script src="~/Content/js/JavaScript.js"></script>
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
-<script>
-    $("#Clear").click(function () {
-        $("#txtName").val("");
-        $("#txtEmail").val("");
-        $("#txtMsg").val("");
-        $("#msg").empty();
 
+@*<script>
+        function BtnSubmitClick() {
+            var Enquiry = {};
+            Enquiry["Name"] = $("#txtName").val();
+            Enquiry["EmailId"] = $("#txtEmail").val();
+            Enquiry["Message"] = $("#txtMsg").val();
 
-    });
-</script>
+            $.ajax({
+                url: "Home/UploadData",
+                contentType: "application/json;charset=ut-f-8",
+                method: "POST",
+                data: JSON.stringify(Enquiry),
+                success: function (data) {
+                    var fd = new FormData();
+                    var xhr = new XMLHttpRequest();
+                    xhr.open(url);
+                    xhr.send(fd);
+
+                },
+                error: function (data) {
+                    alert("Failed to submit inquiry !");
+
+                }
+            })
+        }
+    </script>*@
+
 
 
